uncollapsing margin fix

--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -35,4 +35,13 @@
 .sd-accent-box-text {
   display: table-cell;
   background-color: #ebf8ff;
+  padding: 15px;
+}
+
+.sd-accent-box-text h1:first-child,h2:first-child,h3:first-child,h4:first-child,h5:first-child,h6:first-child {
+  margin-top: 0px;
+}
+
+.sd-accent-box-text h1:last-child,h2:last-child,h3:last-child,h4:last-child,h5:last-child,h6:last-child {
+  margin-bottom: 0px;
 }
